- add ACCESS_NETWORK_STATE permission in manifest - modify ic_launcher - remove settings menu - add error message when list is empty - add layout for tablet mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
   <string name="input_hint">FB</string>
   <string name="input_prefill"></string>
   <string name="network_toast">Uh-oh! This app requires an internet connection</string>
+  <string name="empty_stock_list">No stocks information available</string>
+    <string name="title_stock_list">Stocks</string>
+    <string name="title_stock_detail">Stock Detail</string>
 </resources>
