- add company column in database - add content description to stock list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_stock_detail">Stock Detail</string>
   <string name="empty__list_no_network">No stocks information available. The network is not available to fetch stocks.</string>
   <string name="no_symbol_found">No symbol found</string>
+  <string name="add_symbol">Add stock symbol</string>
 </resources>
