--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,22 @@
 <resources>
-  <string name="app_name">Stock Hawk</string>
+    <string name="app_name">Stock Hawk</string>
 
-  <string name="action_example" translatable="false">Example action</string>
+    <string name="action_example" translatable="false">Example action</string>
 
-  <string name="action_settings">Settings</string>
-  <string name="action_change_units" translatable="false">Change Units</string>
-  <string name="symbol_search">Symbol Search</string>
-  <string name="content_test">Search for a Stock Symbol</string>
-  <string name="input_hint" translatable="false">FB</string>
-  <string name="input_prefill" translatable="false"></string>
-  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
-  <string name="empty_stock_list">No stocks information available. The server is not returning data.</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_change_units" translatable="false">Change Units</string>
+    <string name="symbol_search">Symbol Search</string>
+    <string name="content_test">Search for a Stock Symbol</string>
+    <string name="input_hint" translatable="false">FB</string>
+    <string name="input_prefill" translatable="false"></string>
+    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
+    <string name="empty_stock_list">No stocks information available. The server is not returning data.</string>
     <string name="title_stock_list">Stocks</string>
     <string name="title_stock_detail">Stock Detail</string>
-  <string name="empty__list_no_network">No stocks information available. The network is not available to fetch stocks.</string>
-  <string name="no_symbol_found">No symbol found</string>
-  <string name="add_symbol">Add stock symbol</string>
+    <string name="empty__list_no_network">No stocks information available. The network is not available to fetch stocks.</string>
+    <string name="no_symbol_found">No symbol found</string>
+    <string name="add_symbol">Add stock symbol</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
