feat: add stock historical data to database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="empty__list_no_network">No stocks information available. The network is not available to fetch stocks.</string>
     <string name="no_symbol_found">No symbol found</string>
     <string name="add_symbol">Add stock symbol</string>
+    <string name="price">Price</string>
 </resources>
