--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -11,4 +11,5 @@
     <string name="symbol_search">رمز البحث</string>
     <string name="title_stock_detail">الأسهم التفاصيل</string>
     <string name="title_stock_list">مخازن</string>
+    <string name="price">السعر</string>
 </resources>
