feat: load data from database to stock chart
- remove dummy data
- fix error on cursor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="no_symbol_found">No symbol found</string>
     <string name="add_symbol">Add stock symbol</string>
     <string name="price">Price</string>
+    <string name="stock">Stock</string>
 </resources>
